# vello_bench

./: Cargo.toml  README.md  build.sh  common.sh  tauri.sh  wasm.sh
ui/: app.js  index.html  style.css  worker.js
vello_bench_core/: Cargo.toml  build.rs
vello_bench_core/src/: lib.rs  registry.rs  renderer.rs  runner.rs  scenes.rs  screenshot.rs
vello_bench_core/src/benchmarks/: mod.rs  scene_cpu.rs  scene_hybrid.rs  scene_skia.rs  vello_cpu.rs  vello_hybrid.rs
vello_bench_core/src/vello_scenes/: filled_rects.rs  images.rs  mod.rs
vello_bench_tauri/: Cargo.toml
vello_bench_tauri/src/: commands.rs  main.rs
vello_bench_wasm/: Cargo.toml
vello_bench_wasm/src/: lib.rs  webgl_renderer.rs
