[package]
name = "vello_bench_core"
description = "Core library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
vello_common.workspace = true
vello_cpu.workspace = true
fearless_simd.workspace = true
serde.workspace = true
rand.workspace = true
smallvec.workspace = true
usvg.workspace = true
rustc-hash = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# AnyRender scene support
anyrender.workspace = true
anyrender_serialize.workspace = true
anyrender_vello_cpu.workspace = true

# Native-only: hybrid rendering with wgpu, Skia rendering
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyrender_vello_hybrid.workspace = true
anyrender_skia.workspace = true
vello_hybrid = { workspace = true, features = ["wgpu", "wgpu_default"] }
wgpu = "27"
pollster = "0.4"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true

[features]
default = []

[lints]
workspace = true
