[package]
name = "vello_bench_wasm"
description = "WASM library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vello_bench_core.workspace = true
fearless_simd.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
serde_json.workspace = true

# Hybrid WebGL rendering
anyrender.workspace = true
anyrender_vello_hybrid = { workspace = true, features = ["webgl"] }
vello_hybrid = { workspace = true, features = ["webgl"] }
vello_common.workspace = true
vello_cpu.workspace = true
rustc-hash = "2"
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "Document",
    "Window",
    "Element",
    "WebGl2RenderingContext",
] }
js-sys.workspace = true

[features]
default = []
simd128 = []

[lints]
workspace = true
